--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -1,3 +1,81 @@
 #projects {
   // border: solid orange 3px;
+  .sub-header {
+    display: flex;
+    flex-direction: column;
+    p:nth-child(2) {
+      margin: 3vh 0 4vh;
+    }
+  }
+  .sub-nav {
+    p {
+      margin: 1vh 0 0vh 3vw;
+    }
+  }
+  .sub-content:first-child {
+    border-bottom: none;
+    padding-bottom: 0 !important;
+  }
+  .bright {
+    opacity: 1;
+    transition: opacity 1s;
+  }
+  .dim {
+    opacity: 0.5;
+    transition: opacity 1s;
+  }
+  div.bright {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    background-color: white;
+    z-index: 100;
+  }
+
+  div.dim {
+    position: absolute;
+    opacity: 0.7;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    z-index: 100;
+  }
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 3vh;
+    .project {
+      border-top: solid 1px lighten(black, 85%);
+      @media screen and (min-width: 481px) {
+        width: 50%;
+      }
+      @media screen and (min-width: 861px) {
+        width: 33.333%;
+      }
+      a {
+        color: lighten(black, 30%);
+      }
+      p {
+        margin: 1vh 5%;
+        font-size: 1.3vh;
+        &.title {
+          font-weight: 600;
+        }
+      }
+      .screen-shot {
+        position: relative;
+        .laptop {
+          width: 100%;
+        }
+        .image {
+          position: absolute;
+          width: 72.25%;
+          top: 19%;
+          left: 14%;
+          border-radius: 2px;
+        }
+      }
+    }
+  }
 }
