--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -43,3 +43,10 @@
     }
   }
 }
+
+@media screen and (min-width: 769px) {
+  .app-header {
+    display: flex;
+    justify-content: space-between;
+  }
+}
