--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -64,3 +64,35 @@
     }
   }
 }
+
+@media screen and (min-width: 769px) {
+  #home {
+    .top {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .sub-header {
+        width: 100%;
+        margin-bottom: 3vh;
+      }
+      .left, .right {
+        width: 48%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .left {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .title {
+        text-align: left !important;
+      }
+    }
+    .projects {
+      .project {
+        width: 23%;
+      }
+    }
+  }
+}
