--- a/src/app/components/projects/detail/detail.scss
+++ b/src/app/components/projects/detail/detail.scss
@@ -12,6 +12,9 @@
       color: lighten(black, 30%);
       margin: 1vh 5%;
       font-size: 1.5vh;
+      a {
+        color: #BC0097;
+      }
       &.list-item {
         margin-top: 0;
         margin-bottom: 0.25vh;
