--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -47,6 +47,13 @@
     padding-top: 3vh;
     .project {
       border-top: solid 1px lighten(black, 85%);
+      transition: background-color 1s;
+      &:hover {
+        background-color: lighten(black, 98%);
+        p {
+          color: lighten(#701D5F, 10%);
+        }
+      }
       @media screen and (min-width: 481px) {
         width: 50%;
       }
@@ -57,6 +64,8 @@
         color: lighten(black, 30%);
       }
       p {
+        transition: color 0.75s;
+        color: #701D5F;
         margin: 1vh 5%;
         font-size: 1.3vh;
         &.title {
