--- a/src/app/components/nav/nav.scss
+++ b/src/app/components/nav/nav.scss
@@ -9,12 +9,13 @@ $red: #C90059; // red
   a {
     padding: 0.6vh 2vw;
     margin: 0 0 2vh 0;
-    font-size: 0.8em;
+    font-size: 1.6vh;
     transition: opacity 0.5s;
+    font-weight: normal;
     color: #701D5F;
     &.active {
       border-bottom: solid 1px lighten(grey, 20%);
-      color: #701D5F;
+      color: #C90059;
       // color: purple;
       font-weight: bold;
       &:hover {
@@ -23,9 +24,6 @@ $red: #C90059; // red
     }
     &:hover {
       opacity: 0.5;
-    }
-    &:focus {
-      color: #C90059;
     }
   }
 }
