--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -7,10 +7,12 @@
   p, a {
     font-size: 1.4vh;
     padding: 0.5vh 0;
-    color: lighten(black, 50%);
-    transition: color 0.5s;
+    color: #701D5F;
+    transition: opacity 0.5s;
+    opacity: 0.5;
     &:hover {
-      color: lighten(black, 20%);
+      opacity: 1;
+      // color: lighten(#701D5F, 20%);
     }
   }
   i {
@@ -24,7 +26,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     a {
-      margin: 0 1vw 0 0!important;
+      margin: 0.5vh 1vw 0.5vh 0!important;
     }
     &.center {
       align-items: center;
