--- a/src/app/components/resume/resume.scss
+++ b/src/app/components/resume/resume.scss
@@ -9,7 +9,8 @@
       font-style: normal !important;
       margin: 4vh 0;
       padding: 0 !important;
-      color: #BC0097 !important;
+      // color: #BC0097 !important;
+      color: #701D5F;
       i {
         margin-right: 0.5vw;
       }
@@ -19,11 +20,12 @@
     display: flex;
     flex-direction: column;
     a {
-      color: lighten(black, 50%);
-      margin: 0 0 1vh 2vw;
-      transition: opacity 0.5s;
+      margin: 0 0 2vh 2vw;
+      color: #701D5F;
+      cursor: pointer;
+      transition: color 1s;
       &:hover {
-        opacity: 0.5;
+        color: #C90059;
       }
       &:focus {
         color: #C90059;
@@ -33,7 +35,7 @@
   .sub-content {
     padding-bottom: 3vh !important;
     .title {
-      font-size: 2.8vh;
+      font-size: 2.9vh;
       padding: 1vh 0 2vh;
     }
     p {
