--- a/src/app/components/contact/contact.scss
+++ b/src/app/components/contact/contact.scss
@@ -15,7 +15,7 @@
     }
     .phone, .email, .skype {
       // color: lighten(#701D5F, 50%) !important;
-      color: #C90059 !important;
+      color: #701D5F !important;
       opacity: 0.7 !important;
       transition: opacity 1s;
       margin-right: auto;
