--- a/src/app/components/projects/detail/detail.scss
+++ b/src/app/components/projects/detail/detail.scss
@@ -1,16 +1,21 @@
 #detail {
   .project {
     padding-top: 2vh;
+    padding: 0 5%;
     border-top: solid 1px lighten(black, 85%);
     a {
       color: lighten(black, 30%);
     }
     ul {
       margin: 0 0 4vh 0;
+      :first-child {
+        margin-bottom: 0.5vh;
+      }
+      margin-top: 4vh;
     }
     p {
-      color: lighten(black, 30%);
-      margin: 1vh 5%;
+      color: #701D5F;
+      margin: 1vh 0;
       font-size: 1.6vh;
       a {
         color: #BC0097;
@@ -19,8 +24,9 @@
         margin-top: 0;
         margin-bottom: 0.25vh;
       }
-      &.title {
-        font-weight: 600;
+      &.app-title {
+        color: #BC0097;
+        font-size: 2.5vh;
       }
       &.blurb {
         margin-top: 4vh !important;
