--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -26,7 +26,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     a {
-      margin: 0.5vh 1vw 0.5vh 0!important;
+      padding: 0.5vh 1vw !important;
     }
     &.center {
       align-items: center;
