--- a/src/app/components/resume/resume.scss
+++ b/src/app/components/resume/resume.scss
@@ -1,19 +1,23 @@
 #resume {
+  flex-wrap: wrap;
   .bold {
     font-weight: bold;
   }
-  .sub-header {
-    display: flex;
-    flex-direction: column;
+  .sub-content.top {
+    width: 100%;
+    border-bottom: solid 1px lighten(black, 90%);
+    padding-bottom: 1.8vh !important;
+  }
+  .resume_download {
+    font-style: normal !important;
+    margin: 1vh 0 2vh;
+    padding: 1vh 0 !important;
     a {
-      font-style: normal !important;
-      margin: 4vh 0;
-      padding: 0 !important;
       color: #C90059 !important;
       opacity: 1 !important;
-      i {
-        margin-right: 0.5vw;
-      }
+    }
+    i {
+      margin-right: 0.5vw;
     }
   }
   .sub-nav {
