--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -30,6 +30,9 @@
       width: 100%;
     }
   }
+  .left {
+    border-bottom: none !important;
+  }
   .projects {
     display: flex;
     flex-wrap: wrap;
