--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,35 +17,28 @@
     margin: 2vh 5vw;
     font-size: 1.6vh;
     font-weight: 300;
-    border-top: solid 1px lighten(black, 55%);
+    border-top: solid 1px #cccccc;
     .sub-content {
-      padding: 1.8vh 0 11vh 0;
+      padding: 1.8vh 0 1.8vh 0;
       border-bottom: solid 1px lighten(black, 80%);
       .sub-header {
         display: flex;
         justify-content: space-between;
-        p {
-          color: lighten(black, 50%);
-        }
         a {
           font-style: italic;
-          color: lighten(black, 50%);
+          // color: lighten(black, 50%);
           cursor: pointer;
           padding: 0 0.75vw 0.25vh 0.75vw;
           transition: color 0.5s;
           &:hover {
-            color: lighten(black, 20%);
+            // color: lighten(black, 20%);
+            opacity: 1;
           }
-          // border-bottom: solid 1px lighten(black, 85%);
         }
         p, a {
           color: #701D5F;
           transition: opacity 0.5s;
           opacity: 0.5;
-          &:hover {
-            opacity: 1;
-            // color: lighten(#701D5F, 20%);
-          }
         }
       }
     }
