--- a/src/app/components/resume/resume.scss
+++ b/src/app/components/resume/resume.scss
@@ -5,8 +5,11 @@
   }
   .sub-content.top {
     width: 100%;
-    border-bottom: solid 1px lighten(black, 90%);
+    border-bottom: none;
     padding-bottom: 1.8vh !important;
+  }
+  #frontend {
+    padding-bottom: 3vh !important;
   }
   .resume_download {
     font-style: normal !important;
@@ -37,7 +40,6 @@
     }
   }
   .sub-content {
-    padding-bottom: 3vh !important;
     .title {
       font-size: 2.9vh;
       padding: 1vh 0 2vh;
@@ -69,7 +71,8 @@
     }
   }
   #travels {
-    padding-bottom: 11vh !important;
+    padding-bottom: 6vh !important;
+    border-bottom: none !important;
   }
 }
 
