--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -28,6 +28,10 @@
     }
     &.center {
       align-items: center;
+      justify-content: flex-end;
+      a {
+        position: relative;
+      }
     }
     &.right {
       flex-direction: row !important;
