--- a/src/app/components/resume/resume.scss
+++ b/src/app/components/resume/resume.scss
@@ -15,6 +15,7 @@
     font-style: normal !important;
     margin: 1vh 0 2vh;
     padding: 1vh 0 !important;
+    cursor: pointer;
     a {
       color: #C90059 !important;
       opacity: 1 !important;
